--- a/MathGrapher/MathGrapher.csproj
+++ b/MathGrapher/MathGrapher.csproj
@@ -95,6 +95,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="TickLabelsDefinition.cs" />
     <Compile Include="TicksDefinition.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
