--- a/MathGrapher/MathGrapher.csproj
+++ b/MathGrapher/MathGrapher.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -55,6 +56,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AnimatedGifEncoder.cs" />
+    <Compile Include="SaveAsGifCommand.cs" />
+    <Compile Include="SaveAsPngCommand.cs" />
     <Compile Include="TickLabelsDefinition.cs" />
     <Compile Include="TicksDefinition.cs" />
     <Page Include="MainWindow.xaml">
