Support for multiple functions. Now uses StreamGeometry to draw non-animated functions.

--- a/MathGrapher/MathGrapher.csproj
+++ b/MathGrapher/MathGrapher.csproj
@@ -57,6 +57,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AnimatedGifEncoder.cs" />
+    <Compile Include="FunctionDefinition.cs" />
+    <Compile Include="GraphAnimation.cs" />
     <Compile Include="TickLabelGenerators\ImaginaryWholeNumberTickLabelGenerator.cs" />
     <Compile Include="TickLabelGenerators\WholeNumberTickLabelGenerator.cs" />
     <Compile Include="TickLabelGenerators\DefaultTickLabelGenerator.cs" />
