--- a/MathGrapher/MathGrapher.csproj
+++ b/MathGrapher/MathGrapher.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -59,6 +60,8 @@
     <Compile Include="AnimatedGifEncoder.cs" />
     <Compile Include="FunctionDefinition.cs" />
     <Compile Include="GraphAnimation.cs" />
+    <Compile Include="LegendDefinition.cs" />
+    <Compile Include="TickLabelGenerators\EvenWholeNumberTickLabelGenerator.cs" />
     <Compile Include="TickLabelGenerators\ImaginaryWholeNumberTickLabelGenerator.cs" />
     <Compile Include="TickLabelGenerators\WholeNumberTickLabelGenerator.cs" />
     <Compile Include="TickLabelGenerators\DefaultTickLabelGenerator.cs" />
